// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> should match snapshot with label formatter 1`] = `
<div
  aria-disabled="false"
  class="root"
  tabindex="0"
>
  <button
    aria-label="step down"
    class="handle"
    tabindex="-1"
  >
    <i
      class="root"
      style="width: 16px; height: 16px;"
    >
      <svg
        baseProfile="full"
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998H5V11l14-.002v2z"
        />
      </svg>
    </i>
  </button>
  <span
    class="root sizeScale4 label"
  >
    25%
  </span>
  <button
    aria-label="step up"
    class="handle"
    tabindex="-1"
  >
    <i
      class="root"
      style="width: 16px; height: 16px;"
    >
      <svg
        baseProfile="full"
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6v2z"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`<Stepper /> should match snapshot with props 1`] = `
<div
  aria-disabled="false"
  class="root"
  tabindex="0"
>
  <button
    aria-label="step down"
    class="handle"
    tabindex="-1"
  >
    <i
      class="root"
      style="width: 16px; height: 16px;"
    >
      <svg
        baseProfile="full"
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998H5V11l14-.002v2z"
        />
      </svg>
    </i>
  </button>
  <span
    class="root sizeScale4 label"
  >
    19
  </span>
  <button
    aria-label="step up"
    class="handle"
    tabindex="-1"
  >
    <i
      class="root"
      style="width: 16px; height: 16px;"
    >
      <svg
        baseProfile="full"
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6v2z"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`<Stepper /> should match snapshot without props 1`] = `
<div
  aria-disabled="true"
  class="root"
  tabindex="0"
>
  <button
    aria-label="step down"
    class="handle"
    disabled=""
    tabindex="-1"
  >
    <i
      class="root"
      style="width: 16px; height: 16px;"
    >
      <svg
        baseProfile="full"
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998H5V11l14-.002v2z"
        />
      </svg>
    </i>
  </button>
  <span
    class="root sizeScale4 label"
  />
  <button
    aria-label="step up"
    class="handle"
    disabled=""
    tabindex="-1"
  >
    <i
      class="root"
      style="width: 16px; height: 16px;"
    >
      <svg
        baseProfile="full"
        fill="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6v2z"
        />
      </svg>
    </i>
  </button>
</div>
`;
